--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         uses: ./.github/workflows/actions/build-upload-mithril-artifact
         with:
           binaries-build-args: --bin mithril-aggregator --bin mithril-signer --bin mithril-client --bin mithril-relay --features bundle_openssl,full
-          libraries-build-args: --package mithril-stm --package mithril-client --features full
+          libraries-build-args: --package mithril-stm --package mithril-client --features full,unstable
 
       - name: Build Debian packages
         shell: bash
@@ -83,12 +83,12 @@ jobs:
         # Only build client on windows & mac
         - os: macos-12
           binaries-build-args: --bin mithril-client --features bundle_openssl
-          libraries-build-args: --package mithril-stm --package mithril-client --features full
+          libraries-build-args: --package mithril-stm --package mithril-client --features full,unstable
         - os: windows-latest
           # Use `--bins --package <package>` instead of `--bin <package>`, otherwise the 'windows' compatibility
           # hack in mithril common cargo.toml doesn't apply (we have no idea why).
           binaries-build-args: --bins --package mithril-client-cli --features bundle_openssl
-          libraries-build-args: --package mithril-stm --package mithril-client --no-default-features --features num-integer-backend,full
+          libraries-build-args: --package mithril-stm --package mithril-client --no-default-features --features num-integer-backend,full,unstable
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -169,12 +169,12 @@ jobs:
 
         include:
           - os: ubuntu-22.04
-            test-args: --features portable,full --workspace
+            test-args: --features portable,full,unstable --workspace
           # Only test client on windows & mac (since its the only binaries supported for those os for now)
           - os: macos-12
-            test-args: --package mithril-client --package mithril-client-cli --features full
+            test-args: --package mithril-client --package mithril-client-cli --features full,unstable
           - os: windows-latest
-            test-args: --package mithril-client --package mithril-client-cli --features full
+            test-args: --package mithril-client --package mithril-client-cli --features full,unstable
 
     runs-on: ${{ matrix.os }}
 
