--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -40,6 +40,7 @@ strum = { version = "0.26.1", features = ["derive"] }
 tar = { version = "0.4.40", optional = true }
 thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["sync"] }
+tokio-util = "0.7.10"
 uuid = { version = "1.7.0", features = ["v4"] }
 zstd = { version = "0.13.0", optional = true }
 
