--- a/mithril-client-wasm/Cargo.toml
+++ b/mithril-client-wasm/Cargo.toml
@@ -20,7 +20,7 @@ serde = { version = "1.0.196", features = ["derive"] }
 serde-wasm-bindgen = "0.6.3"
 wasm-bindgen = "0.2.90"
 wasm-bindgen-futures = "0.4.40"
-web-sys = { version = "0.3.67", features = ["BroadcastChannel"] }
+web-sys = { version = "0.3.67", features = ["AbortController", "AbortSignal", "BroadcastChannel"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.40"
