--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -48,7 +48,6 @@ serde_with = "3.6.0"
 serde_yaml = "0.9.31"
 sha2 = "0.10.8"
 slog = "2.7.0"
-sqlite = { version = "0.33.0", features = ["bundled"], optional = true }
 strum = { version = "0.26.1", features = ["derive"] }
 thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["io-util", "rt", "sync"] }
@@ -93,9 +92,8 @@ serde_yaml = "0.9.31"
 default = []
 
 # Full feature set
-full = ["random", "database", "fs", "test_tools"]
+full = ["random", "fs", "test_tools"]
 random = ["rand_core/getrandom"]
-database = ["dep:sqlite"]
 fs = ["tokio/fs", "tokio/process", "dep:pallas-network", "dep:pallas-traverse"]
 
 # Portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
