--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mithril-client"
-version = "0.6.0"
+version = "0.6.1"
 description = "Mithril client library"
 authors = { workspace = true }
 edition = { workspace = true }
@@ -44,19 +44,19 @@ uuid = { version = "1.7.0", features = ["v4"] }
 zstd = { version = "0.13.0", optional = true }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-mithril-common = { path = "../mithril-common", version = "0.2", features = [
+mithril-common = { path = "../mithril-common", version = "=0.3", features = [
     "fs",
 ] }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 getrandom = { version = "0.2.12", features = ["js"] }
-mithril-common = { path = "../mithril-common", version = "0.2" }
+mithril-common = { path = "../mithril-common", version = "=0.3" }
 reqwest = { version = "0.11.23", features = ["json", "stream"] }
 
 [dev-dependencies]
 httpmock = "0.7.0"
 indicatif = { version = "0.17.7", features = ["tokio"] }
-mithril-common = { path = "../mithril-common", version = "0.2", features = [
+mithril-common = { path = "../mithril-common", version = "=0.3", features = [
     "random",
     "test_tools",
 ] }
