--- a/mithril-client-cli/Cargo.toml
+++ b/mithril-client-cli/Cargo.toml
@@ -32,7 +32,7 @@ fs2 = "0.4.3"
 futures = "0.3.28"
 human_bytes = { version = "0.4.3", features = ["fast"] }
 indicatif = { version = "0.17.7", features = ["tokio"] }
-mithril-client = { path = "../mithril-client", features = ["fs"] }
+mithril-client = { path = "../mithril-client", features = ["fs", "unstable"] }
 mithril-common = { path = "../mithril-common", features = ["full"] }
 openssl = { version = "0.10.63", features = ["vendored"], optional = true }
 openssl-probe = { version = "0.1.5", optional = true }
