--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -266,13 +266,13 @@ jobs:
       matrix:
         mode: [ "std" ]
         era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras) }}
-        cardano_node_version: [ "8.7.3" ]
+        cardano_node_version: [ "8.7.3", "8.8.0-pre" ]
         hard_fork_latest_era_at_epoch: [ 0,10,100 ]
-        run_id: [ "#1","#2" ]
+        run_id: [ "#1" ]
         extra_args: [ "" ]
 
         include:
-          # Include a hard fork test for `8.1.2` which is not concerned
+          # Include a test for `8.1.2` which is not concerned by the hard fork 
           - mode: "std"
             era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras)[0] }}
             cardano_node_version: "8.1.2"
