--- a/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
+++ b/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
@@ -31,3 +31,5 @@ mithril-common = { "path" = "../../mithril-common", features = [
 reqwest = "0.11.23"
 warp = "0.3.6"
 
+[build-dependencies]
+serde_json = "1.0.113"
