--- a/examples/client-mithril-stake-distribution/Cargo.toml
+++ b/examples/client-mithril-stake-distribution/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/input-output-hk/mithril/"
 
 [dependencies]
 anyhow = "1.0.79"
+clap = { version = "4.4.18", features = ["derive", "env"] }
 mithril-client = { path = "../../mithril-client" }
 slog = "2.7.0"
 slog-async = "2.8.0"
