--- a/examples/client-snapshot/Cargo.toml
+++ b/examples/client-snapshot/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/input-output-hk/mithril/"
 [dependencies]
 anyhow = "1.0.79"
 async-trait = "0.1.77"
+clap = { version = "4.4.18", features = ["derive", "env"] }
 futures = "0.3.30"
 indicatif = "0.17.7"
 mithril-client = { path = "../../mithril-client", features = ["fs"] }
