--- a/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
+++ b/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
@@ -15,6 +15,7 @@ axum = { version = "0.7.4", features = ["tokio", "http1"] }
 clap = { version = "4.4.18", features = ["derive"] }
 clap_derive = "4.4.7"
 futures = "0.3.30"
+serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 signal-hook = "0.3.17"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
