--- a/mithril-doc/Cargo.toml
+++ b/mithril-doc/Cargo.toml
@@ -10,7 +10,7 @@ repository = { workspace = true }
 include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]
 
 [dependencies]
-clap = { version = "4.4.6", features = ["derive"] }
+clap = { version = "4.4.6", features = ["derive", "env"] }
 config = "0.13.3"
 mithril-doc-derive = { path = "../mithril-doc-derive" }
 
