--- a/mithril-client-cli/Cargo.toml
+++ b/mithril-client-cli/Cargo.toml
@@ -49,6 +49,9 @@ slog-term = "2.9.0"
 thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["full"] }
 
+[dev-dependencies]
+mithril-common = { path = "../mithril-common", features = ["test_tools"] }
+
 [features]
 portable = ["mithril-client/portable"]
 bundle_openssl = ["dep:openssl", "dep:openssl-probe"]
