--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mithril-common"
-version = "0.3.7"
+version = "0.3.8"
 description = "Common types, interfaces, and utilities for Mithril nodes."
 authors = { workspace = true }
 edition = { workspace = true }
@@ -33,7 +33,11 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "serde_enabled",
     "sk_clone_enabled",
 ] }
-minicbor = { version = "0.20", features = ["std", "half", "derive"], optional = true }
+minicbor = { version = "0.20", features = [
+    "std",
+    "half",
+    "derive",
+], optional = true }
 nom = "7.1.3"
 pallas-addresses = { version = "0.23.0", optional = true }
 pallas-codec = { version = "0.23.0", optional = true }
