--- a/internal/mithril-persistence/Cargo.toml
+++ b/internal/mithril-persistence/Cargo.toml
@@ -16,7 +16,7 @@ anyhow = "1.0.79"
 async-trait = "0.1.77"
 chrono = { version = "0.4.33", features = ["serde"] }
 hex = "0.4.3"
-mithril-common = { path = "../../mithril-common" }
+mithril-common = { path = "../../mithril-common", features = ["fs"] }
 semver = "1.0.21"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
