--- a/mithril-infra/assets/docker/docker-compose-aggregator-noauth.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-noauth.yaml
@@ -76,6 +76,7 @@ services:
       - ERA_READER_ADAPTER_PARAMS=${ERA_READER_ADAPTER_PARAMS}
       - CEXPLORER_POOLS_URL=${CEXPLORER_POOLS_URL}
       - ALLOW_UNPARSABLE_BLOCK=${ALLOW_UNPARSABLE_BLOCK}
+      - CARDANO_TRANSACTIONS_PROVER_CACHE_POOL_SIZE=${CARDANO_TRANSACTIONS_PROVER_CACHE_POOL_SIZE}
     volumes:
       - ../data/${NETWORK}/mithril-aggregator/mithril:/mithril-aggregator/mithril
       - ../data/${NETWORK}/mithril-aggregator/cardano/db:/db
