--- a/mithril-client-wasm/Cargo.toml
+++ b/mithril-client-wasm/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["cdylib"]
 [dependencies]
 async-trait = "0.1.77"
 futures = "0.3.30"
+http = "1.1.0"
 mithril-client = { path = "../mithril-client", features = ["unstable"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde-wasm-bindgen = "0.6.3"
