--- a/mithril-client-wasm/www/package.json
+++ b/mithril-client-wasm/www/package.json
@@ -10,9 +10,9 @@
     "@mithril-dev/mithril-client-wasm": "file:../pkg"
   },
   "devDependencies": {
-    "webpack": "^5.88.2",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.15.1",
-    "copy-webpack-plugin": "^12.0.2"
+    "copy-webpack-plugin": "^12.0.2",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
