--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -31,7 +31,13 @@ chrono = { version = "0.4.33", features = ["serde"] }
 flate2 = { version = "1.0.28", optional = true }
 flume = { version = "0.11.0", optional = true }
 futures = "0.3.30"
-reqwest = { version = "0.12.4", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json", "stream"] }
+reqwest = { version = "0.12.4", default-features = false, features = [
+    "charset",
+    "http2",
+    "macos-system-configuration",
+    "json",
+    "stream",
+] }
 semver = "1.0.21"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
@@ -51,14 +57,19 @@ mithril-common = { path = "../mithril-common", version = "=0.4", features = [
 [target.'cfg(target_family = "wasm")'.dependencies]
 getrandom = { version = "0.2.12", features = ["js"] }
 mithril-common = { path = "../mithril-common", version = "=0.4" }
-reqwest = { version = "0.12.4", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json", "stream"] }
+reqwest = { version = "0.12.4", default-features = false, features = [
+    "charset",
+    "http2",
+    "macos-system-configuration",
+    "json",
+    "stream",
+] }
 
 [dev-dependencies]
 httpmock = "0.7.0"
 indicatif = { version = "0.17.7", features = ["tokio"] }
 mithril-common = { path = "../mithril-common", version = "=0.4", features = [
     "random",
-    # "test_tools", # This is pulling in Reqwest + OpenSSL.  Disable and see if it breaks anything.
 ] }
 mockall = "0.12.1"
 slog-async = "2.8.0"
